added CarRentalBookingController.php and change the welcome page
